--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
 
         <section class="clients">
 
-          <h3 class="h3 clients-title">Clients</h3>
+          <h3 class="h3 clients-title">Clients & Internships</h3>
 
           <ul class="clients-list has-scrollbar">
 
@@ -402,11 +402,6 @@
               </a>
             </li>
 
-            <li class="clients-item">
-              <a href="#">
-                <img src="./assets/images/logo-6-color.png" alt="client logo">
-              </a>
-            </li>
 
           </ul>
 
